--- a/client/front.jade
+++ b/client/front.jade
@@ -132,7 +132,7 @@ template(name='model_scroller')
     
 
 template(name='healthclub_status')
-    .ui.segment
+    .ui.basic.segment
         .ui.header
             |upper hot tub out of order
         div
