--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -2,13 +2,13 @@ template(name='rules_signing')
     with signing_doc
         +document_view key='rules_regs'
         +user_card resident
-        .ui.header I agree to the Rules and Regulations
+        .ui.header i agree to the rules and regulations
             if agree
                 i.huge.checkmark.green.link.icon.agree
             else
                 i.huge.circle.outline.grey.icon.agree
         if agree
-            .ui.header Please Sign Below
+            .ui.header please sign below
             if signature_saved
                 +signature_view key='signature' direct=true
                 i.pencil.large.icon.edit_signature
@@ -16,9 +16,15 @@ template(name='rules_signing')
                 +signature_edit key='signature' direct=true
             if signature_saved
                 .ui.big.blue.fluid.button.submit_rules
-                    | Submit
+                    | submit
                     i.right.chevron.icon
 
+
+
+template(name='download_rules_pdf')
+    .ui.header downloading rules pdf...
+    with downloading_user
+        +rules_and_regs_check
 
 
 template(name='add_guest')
