fixed mailgun login, working pdf rules receipt flow from profile

--- a/client/profile.jade
+++ b/client/profile.jade
@@ -530,6 +530,9 @@ template(name='membership_status')
         +email_validation_check
         +lease_expiration_check
         +rules_and_regs_check
+        .ui.large.basic.button.email_rules_receipt
+            i.envelope.teal.icon
+            |email rules and regs receipt
         //- +rules_and_regs_
         
         
