--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -25,6 +25,9 @@ template(name='download_rules_pdf')
     .ui.header downloading rules pdf...
     with downloading_user
         +rules_and_regs_check
+    .ui.massive.basic.button.download_rules_pdf
+        i.download.icon
+        |download rules pdf    
 
 
 template(name='add_guest')
