--- a/client/staff.jade
+++ b/client/staff.jade
@@ -57,6 +57,8 @@ template(name='unit_key_widget')
         .ui.icon.large.fluid.input
             i.home.icon
             input(type='number' placeholder='unit number')
+        .ui.fluid.teal.button.lookup_key
+            |lookup key
 
 
 template(name='task_widget')
