round of fa icons convert to office icons8, working guest_ids list in profile

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -1,6 +1,7 @@
 template(name='comments')
     .ui.grey.header
-        i.chat.icon
+        //- i.chat.icon
+        +i name='chat'
         |comments
     if currentUser
         .ui.fluid.icon.input
