--- a/client/healthclub.jade
+++ b/client/healthclub.jade
@@ -202,7 +202,7 @@ template(name='checkin_card')
                             each checkin_guest_docs
                                 .ui.big.button.remove_guest 
                                     i.remove.icon
-                                    |#{first_name} #{last_name}
+                                    |#{guest_name}
                             
             .one.column.row
                 .column
