--- a/client/chat.jade
+++ b/client/chat.jade
@@ -118,8 +118,7 @@ template(name='view_chats')
                 //- .ui.label(title='Unread') #{unread_message_count} Unread
                 .unread_icon(data-tooltip='Unread Messages' data-position='bottom center')
                     i.secured-letter.icon
-                .ui.inline.grey.header 
-                    i.tags.icon
+                +i name='tags' classes='ui inline mini image'
                 +cloud filter='chat'
                 //- +participant_filter type='chat'
                 +chat_list
