--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -32,7 +32,8 @@ template(name='model_edit')
                         each fields
                             .title 
                                 |#{rank}
-                                i.icon(class=icon)
+                                +i name=icon classes='ui avatar image'
+                                //- i.icon(class=icon)
                                 |#{title} 
                                 i.dropdown.icon
                             +field_edit
