--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -29,8 +29,9 @@ template(name='model_doc_view')
                 .six.wide.column
                     .ui.cloud.segment
                         .ui.large.basic.button.back_to_model
-                            i.left.chevron.icon
-                            i.icon(class=current_model.icon)
+                            +i name='chevron left' classes='ui mini inline image'
+                            +i name=current_model.icon classes='ui mini inline image'
+                            //- i.icon(class=current_model.icon)
                             //- +i name=current_model.icon classes='ui mini inline image'
                             |#{current_model.title}
                             //- .divider
